--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Flask = "^2.2.2"
 requests = "^2.28.1"
 aiopyston = "^1.2.1"
 motor = "^3.1.1"
+replit = "^3.2.5"
 
 [tool.poetry.dev-dependencies]
 
